tests/internal/negative_case/bad_static_init_non_constant.c
// Expected: compile fail (discarding const qualifier in local static pointer initialization)
const int cx = 1;

int main(void) {
  static int *p = &cx;
  return p != 0;
}
